--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "author": "Radek <rs676@cam.ac.uk>",
     "version": "0.1.0",
     "dependencies": {
-        "blad": "latest",
+        "blad": "2.0.4",
         "marked": "0.2.5",
         "kronic-node": "0.0.1",
         "request": "2.9.203",
