--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "mongodb": "mongodb://localhost:27017/documents",
+    "mongodb": "use process.env.DATABASE_URL instead",
     "browserid": {
         "provider": "https://browserid.org/verify",
-        "salt":     "Q?RAf!CAkus?ejuCruKu",
+        "salt":     "use process.env.API_SALT instead",
         "users": [
             "radek.stepan@gmail.com",
             "jelena121@gmail.com",
