say how to pass env vars using chernobyl

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "author": "Radek <rs676@cam.ac.uk>",
     "version": "1.0.0",
     "dependencies": {
-        "blad": "2.0.5",
+        "blad": "latest",
         "marked": "0.2.5",
         "kronic-node": "0.0.1",
         "request": "2.9.203",
