--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "micklem-lab-site",
     "author": "Radek <rs676@cam.ac.uk>",
-    "version": "1.3.2",
+    "version": "1.3.3",
     "dependencies": {
-        "blad": "latest",
+        "blad": "3.0.5",
         "marked": "~0.2.10",
         "kronic-node": "0.0.1",
         "request": "~2.27.0",
