--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "micklem-lab-site",
     "author": "Radek <rs676@cam.ac.uk>",
-    "version": "1.3.4",
+    "version": "1.3.5",
     "dependencies": {
-        "blad": "3.0.6",
+        "blad": "3.0.8",
         "marked": "~0.2.10",
         "kronic-node": "0.0.1",
         "request": "~2.27.0",
@@ -12,5 +12,8 @@
     },
     "scripts": {
         "start": "start.js"
+    },
+    "engines": {
+        "node": "0.10.x"
     }
 }
